Fix style of banner-background Was covering the bookmark instruction links Closes #4

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1049,7 +1049,6 @@ margin: 0.5em 0 10px 0;
 .banner-background
 {
             width: 100%;
-            height: 100%;
             position: absolute;
             top: 0;
 }
